feat: 删除内存永久保存区域&增加自定义UUID